# CoverageType

./: .gitignore  CoverageType.opam  CoverageType.opam.template  README.md  dune-project  meta-config.json
.github/workflows/: build.yml
ast/: astHelper.ml  fv.ml  map.ml  parseTree.ml  subst.ml
auxtyping/: dune  subcty.ml  subrty.ml  tyfunc.ml  wellfound.ml
data/bench/: run_bench.js
data/inline_test/: alias.ml
data/monad/: case1.ml  coverage_monad_library.ml  depth_tree.ml  herdtools7.ml  test.ml  tezos.ml  tezos_test.ml  tree2list.ml  vellvm.ml  xen_api.ml  zipperposition.ml
data/predefined/: axioms.ml  axioms_bak.ml  axioms_bench.ml  axioms_simple.ml  axioms_test.ml  basic_typing.ml  basic_typing.ml.simple  basic_typing_bench.ml  refinement_typing.ml  refinement_typing.ml.bak  refinement_typing.ml.simple
data/simple/: ReturnError.ml
data/subtype_test_cases/: emp_even_simple.ml  emp_simple.ml  simple.ml
data/test_cases/: basic_int.ml
frontend_opt/: common.ml  dune  to_cty.ml  to_item.ml  to_judgement.ml  to_raw_term.ml  to_rty.ml  to_type_dec.ml
language/: language.ml
preprocess/: basic_typing.ml  dune  normalization.ml  preprocess.ml  type_alias.ml
script/: run_bench.py  table3.py  table4.py  table5.py  table6.py
statistic/: dune  statistic.ml
test/: dune  meta-config.json  test_CoverageType.ml
test/auxtest/: auxtest.ml  definitions.ml  dune
test/fast/: dune  fast.ml
test/flaky/: dune  flaky.ml
test/monad/: dune  monad.ml
test/slow/: dune  slow.ml
typing/: bidirect.ml  common.ml  dune  handlePred.ml  itemcheck.ml  typing.ml
(+241 files in other folders)
